--- a/assets/typography.css
+++ b/assets/typography.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'Recursive';
-	src: url('/assets/Recursive.woff2') format("woff2-variations");
+	src: url('/assets/cozette.woff2') format('woff2');
 	font-weight: normal;
 	font-style: normal;
 }
