--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,406 +1,1 @@
-@import url("typography.css");
-@import url("extras.css");
-@import url("minor.css");
-
-/* -- GLOBAL -- */
-
-* {
-    box-sizing: border-box;
-    position: relative;
-    scroll-behavior: smooth;
-}
-
-:root {
-    --margin: -0.8em;
-    --black: #181818;
-    --white: #fafafa;
-    --nv-black: #181818;
-    --nv-white: #fafafa;
-}
-
-pre {
-    background-color: var(--black);
-    color: var(--white);
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --black: #fafafa;
-        --white: #181818;
-    }
-
-    pre {
-        background-color: var(--white);
-        color: var(--black);
-    }
-}
-
-/* -- DOCUMENT -- */
-
-body::-webkit-scrollbar {
-    width: 0.5em;
-}
-
-body::-webkit-scrollbar-track {
-    background-color: var(--white);
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: var(--black);
-}
-
-html,
-body {
-    height: 100%;
-}
-
-body {
-    tab-size: 4;
-    scrollbar-color: var(--white) var(--black);
-    scrollbar-width: 0.5em;
-    overflow-x: hidden;
-    margin: 0;
-    background-color: var(--white);
-    color: var(--black);
-
-    display: flex;
-    flex-direction: column;
-}
-
-kbd {
-    display: inline-block;
-    background: var(--black);
-    color: #aaa;
-    padding: 0 5px;
-    border-radius: 5px;
-}
-
-
-h3 {
-    margin-bottom: 0.1em;
-}
-
-img {
-    display: block;
-}
-
-pre,
-code {
-    line-height: initial;
-}
-
-img.inline {
-    max-width: 18em;
-    float: left;
-    margin-right: 1em;
-    margin-bottom: 1em;
-    width: unset;
-}
-
-pre {
-    overflow-y: hidden;
-    overflow-x: auto;
-    text-align: left;
-    margin: 0;
-    padding: 1em;
-    white-space: normal;
-    border-radius: 5px;
-}
-
-.whitespace-pre {
-    white-space: pre-line;
-}
-
-pre>code {
-    white-space: pre;
-}
-
-figure {
-    display: inline-block;
-}
-
-article,
-main {
-    width: 100%;
-    padding-right: 23vw;
-    padding-left: 12vw;
-    line-height: 1.5;
-}
-
-body > article:first-child {
-    padding-top: 2em;
-}
-
-main ul,
-article ul,
-p {
-    margin-top: 0;
-}
-
-li > ul {
-    margin-top: 0;
-}
-
-li > ul:not(:empty) {
-    margin-bottom: 1em;
-}
-
-iframe {
-    border: 1px dashed;
-    width: 100%;
-    height: 100%;
-}
-
-iframe.nb {
-    border: 0;
-}
-
-a {
-    color: #aaa;
-    text-decoration: none;
-    word-wrap: break-word;
-    word-break: break-word;
-    hyphens: auto;
-}
-
-a.special {
-    color: inherit;
-}
-
-
-
-figcaption {
-    text-align: right;
-    font-size: 0.8em;
-    font-style: italic;
-    color: color-mix(in srgb, var(--black) 70%, var(--white) 30%);
-}
-
-blockquote {
-    margin: 1em 0 0 5em;
-}
-
-li>blockquote {
-    margin: 1em 0 0 1em;
-}
-
-blockquote::before {
-    content: "❝";
-    position: absolute;
-    left: -1.5em;
-    font-size: 2.5em;
-    top: -0.4em;
-}
-
-figcaption {
-    margin-left: 1em;
-}
-
-figure {
-    margin: 0;
-}
-
-
-/* Animate <summary> icon */
-summary::marker {
-    content: "";
-}
-
-summary::before {
-    content: "▶";
-    position: absolute;
-    font-size: 0.8em;
-    left: -1.2em;
-    top: 0.15em;
-    transition: all 0.3s ease;
-}
-
-details[open] summary::before {
-    transform: rotate(90deg);
-}
-
-/*
-li:not(:first-child) {
-    margin: 1em 0;
-}
-*/
-
-mark {
-    /* background: var(--black); */
-    padding: 1em;
-    color: inherit;
-    border-radius: 5px;
-    display: inline-block;
-}
-
-@media (prefers-color-scheme: light) {
-    mark {
-        background-color: color-mix(in srgb, var(--nv-white) 90%, black);
-    }
-}
-
-@media (prefers-color-scheme: dark) {
-    mark {
-        background-color: color-mix(in srgb, var(--nv-black) 80%, white);
-    }
-}
-
-/* ARTICLE FOOTER */
-
-footer {
-    margin-left: 5vw;
-    padding: 2em 0 0 0;
-    display: flex;
-    align-items: center;
-}
-
-footer>a[href="/out/index.html"] {
-    text-decoration: none;
-}
-
-footer>a[href="/out/index.html"]::before {
-    content: "✈";
-    padding-right: 10px;
-}
-
-main footer,
-article footer {
-    margin-left: 0;
-}
-
-/* TABLE */
-
-table {
-    border-collapse: collapse;
-    table-layout: fixed;
-    border: 1px solid #aaa;
-}
-
-table * {
-    text-align: center;
-    margin: 0;
-}
-
-/* Footnotes */
-
-h2.footnotes {
-    display: none;
-}
-
-#footnotes {
-    border-top: 1px solid;
-    padding-top: 0.5em;
-}
-
-.footpara {
-    display: inline;
-}
-
-.underline {
-    text-decoration: underline;
-}
-
-article img,
-main img {
-    object-fit: contain;
-    object-position: left;
-    max-height: 60vh;
-    width: 100%;
-}
-
-/* Style heading image to the right */
-header img {
-    float: right;
-    border-radius: 5px;
-}
-
-li .in-margin {
-    top: 0;
-    left: -3em;
-}
-
-/* @media (prefers-color-scheme: light) { */
-.hljs {
-    background-color: var(--nv-black) !important;
-}
-
-
-nav.toc {
-    position: fixed;
-    top: 0;
-    right: 0;
-    float: right;
-    max-width: 20vw;
-    font-size: 0.8em;
-    text-overflow: ellipsis;
-    margin: 2em;
-    z-index: 999;
-}
-
-nav.toc ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    white-space: nowrap;
-}
-
-nav.toc ul .toc-subheading::before {
-    border-left: 2px solid gray;
-    content: "";
-    padding-left: 0.8em;
-}
-
-nav.toc ul .toc-subheading:last-child:before {
-    border-left: none;
-    background-image: linear-gradient(to bottom, gray 0%, gray 50%, transparent 50%, transparent 75%, transparent 100%);
-    background-size: 2px 100%;
-    background-repeat: no-repeat;
-}
-
-nav.toc ul .toc-subheading {
-    position: relative;
-}
-
-nav.toc ul .toc-subheading::after {
-    left: 0;
-    position: absolute;
-    content: "";
-    width: 0.6em;
-    height: 0.5em;
-    border-bottom: 2px solid gray;
-    /* borer-bottom-left-radius: 8px; */
-    /* border-left: 2px solid gray; */
-}
-
-nav.toc a {
-    color: var(--black);
-}
-
-nav.toc ul .toc-subheading {
-    margin-left: 0.6em;
-}
-
-@media only screen and (max-width: 600px) {
-
-    /*-- Mobile Styles --*/
-    article {
-        padding-left: 8vw;
-        padding-right: 0;
-    }
-
-    nav.toc {
-        display: none;
-    }
-
-    header img {
-        float: revert;
-    }
-
-    blockquote {
-        margin-left: 1em;
-    }
-
-    blockquote::before {
-        left: -0.7em;
-    }
-}
+@font-face{font-family:Body Font;font-style:normal;font-weight:400;src:url(/assets/fonts/FairfaxHDEmoji.ttf)}@font-face{font-family:Heading Font;src:url(/assets/fonts/cozette.woff2) format("woff2")}:root{--article-size:1em;--human-style:"CASL" 0.8}article{font-size:var(--article-size)}body{font-size:1.4em}.normal-font,body{font-family:Body Font,Heading Font,Symbols Nerd Font,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;font-variation-settings:"MONO" 0;font-weight:400}figcaption,i,span.special,var{font-style:italic}code,kbd,pre{font-family:Heading Font,Body Font,Courier New,Courier,monospace;font-size:calc(var(--article-size)*.9);font-variation-settings:"MONO" 1}summary{font-size:calc(var(--article-size)*1.2)}.human,h1,h2,h3,h4,h5,h6{font-family:Heading Font,Body Font,Gill Sans,Gill Sans MT,Calibri,Trebuchet MS,sans-serif;font-variation-settings:var(--human-style)}h4,h5,h6{font-weight:400;margin:0}h1,h2,h3{font-variation-settings:var(--human-style),"wght" 600;font-weight:400}h1{font-size:calc(var(--article-size)*2.1);margin-bottom:.4em}h2{font-size:calc(var(--article-size)*2);margin-bottom:.3em}h3{font-size:calc(var(--article-size)*1.5)}h4{font-size:calc(var(--article-size)*1)}h5{font-size:calc(var(--article-size)*.9)}h6{font-size:calc(var(--article-size)*.8)}.showcase{overflow-x:hidden}.showcase:hover{overflow-x:auto}.showcase::-webkit-scrollbar{width:.8em}.showcase::-webkit-scrollbar-track{border:1px solid}.showcase::-webkit-scrollbar-thumb{background:var(--black)}.showcase img{border:1px solid}.tierlist tr:not(:last-child){border-bottom:1px solid var(--gray)}.tierlist td:first-child{border-right:1px solid var(--black);color:#000;text-align:left}.tierlist,.tierlist *{border:none}.tierlist tr:first-child td:first-child{background:#ff7f7f}.tierlist tr:nth-child(2) td:first-child{background:#ffbf7f}.tierlist tr:nth-child(3) td:first-child{background:#ffdf7f}.tierlist tr:nth-child(4) td:first-child{background:#ffff7f}.tierlist tr:nth-child(5) td:first-child{background:#bfff7f}.tierlist td{border-right:none!important}.gallery-container{flex-direction:column-reverse}.gallery-container,.thumbnails{display:flex;justify-content:center}.thumbnails{flex-direction:row;gap:6px;padding:1em 0}.thumbnails div{background:var(--gray);border-radius:100%;cursor:pointer;height:8px;width:8px}.thumbnails div.highlighted{background-color:#777}.slides{display:grid;gap:1rem;grid-auto-flow:column;overflow-y:auto;overscroll-behavior-x:contain;padding:0 .25rem;scroll-behavior:smooth;scroll-snap-type:x mandatory;scrollbar-width:none}.slides>div{scroll-snap-align:start}.slides img{max-height:unset;object-fit:contain;width:auto}.row{display:flex;gap:1em}button{background:coral;border:0;box-shadow:none;color:var(--white);cursor:pointer;display:inline-block;font-family:inherit;font-size:.8em;height:fit-content;outline:0;outline:1px solid var(--white);outline-offset:-6px;padding:.8em .9em;text-wrap:nowrap;width:fit-content}button:hover{font-weight:700}pre[data-language]{position:relative}pre[data-language]:before{color:dimgrey;content:attr(data-language);font-size:1.1em;font-weight:bolder;position:absolute;right:0;top:0}.txt-c{text-align:center}.block-center{align-items:center;display:flex;justify-content:center}.reset{font-weight:400}.katex{white-space:pre}.minor-fold summary{color:var(--gray);font-size:.8em}.gnuplot-container pre{background-color:var(--white-lighter);color:var(--black-darker)!important;font-family:Body Font;overflow-wrap:unset!important;padding:0;word-wrap:unset!important;max-width:100vw;overflow-x:auto}.gnuplot-container{font-size:.8em;height:fit-content;width:fit-content}.pdf-container img{max-height:none}.pdf-container{touch-action:none;transform-origin:0 0}.gnuplot-container svg{height:100%;width:100%}.pxl,.pxl-art{image-rendering:crisp-edges}.in-margin{display:inline-block;font-family:var(--serif);left:2em;position:absolute;user-select:none}.demo .quad>*,.demo .split-e>*,.demo .split>*{border:2.5px solid coral;text-align:center}.split>*{width:100%}.split,.split-e{display:grid;grid-template-columns:1fr 1fr;grid-column-gap:1em;grid-row-gap:1em}.split-f{display:flex}.split-f>*{flex:1}.split-e{grid-template-columns:19em 19em}.onx{overflow-x:none}.quad,.quad-e{display:grid;grid-template-columns:repeat(auto-fit,19em);grid-template-rows:1fr 1fr;grid-column-gap:1em;grid-row-gap:1em}.quad-e{grid-template-columns:repeat(auto-fit,17em)}.horizontal,.horizontal:not(p)>p{column-gap:1em;display:flex;flex-wrap:wrap;row-gap:1em}.img-pxl,header .img-sml{image-rendering:pixelated}.img-sml{max-height:200px;max-width:200px}.ovr-x{overflow-x:auto}.linklist a{border-right:2px solid #888;font-style:italic;padding:0 8px;text-decoration:none}.linklist a:last-of-type{border-right:0}@media only screen and (max-width:600px){.quad{grid-template-columns:unset}.split-e{grid-template-columns:1fr 1fr}.force-break{grid-template-columns:1fr!important}h1{font-size:2em}.hide-m{display:none}}*{box-sizing:border-box;position:relative;scroll-behavior:smooth}:root{--margin:-0.8em;--black:#181818;--white:#fafafa;--white-lighter:#fdfdfd;--black-darker:#111;--white-darker:#f0f0f0;--black-lighter:#333;--nv-black:#181818;--nv-white:#fafafa;--nv-black-darker:#111;--gray:color-mix(in srgb,var(--black) 60%,var(--white) 40%)}pre{background-color:var(--nv-black-darker);color:var(--white)}.hljs{background-color:inherit!important;background:inherit!important}@media (prefers-color-scheme:dark){:root{--black:#fafafa;--white:#181818;--white-lighter:#111;--black-darker:#fdfdfd;--white-darker:#333;--black-lighter:#f0f0f0}}body::-webkit-scrollbar{width:.5em}body::-webkit-scrollbar-track{background-color:var(--white)}body::-webkit-scrollbar-thumb{background-color:var(--black)}body,html{height:100%}body{background-color:var(--white-lighter);color:var(--black);display:flex;flex-direction:column;margin:0;overflow-x:hidden;scrollbar-color:var(--white-darker) var(--white-lighter);scrollbar-width:.5em;tab-size:4}kbd{background:var(--black);border-radius:5px;color:var(--gray);display:inline-block;padding:0 5px}h3{margin-bottom:.1em}img{display:block}code,pre{line-height:normal;scrollbar-color:var(--white-darker) var(--white-lighter)}img.inline{float:left;margin-bottom:1em;margin-right:1em;max-width:18em;width:unset}pre{border-radius:5px;margin:0;overflow-x:auto;overflow-y:hidden;padding:1em;text-align:left;white-space:normal}pre:has(code:not(.language-plaintext)){border:1px solid}.whitespace-pre{white-space:pre-line}pre>code{white-space:pre}figure{display:inline-block}article,main{line-height:1.5;padding-left:12vw;padding-right:23vw;width:100%}body>article:first-child{padding-top:2em}article ul,li>ul,main ul,p{margin-top:0}li>ul:not(:empty){margin-bottom:1em}iframe{border:1px dashed;height:100%;width:100%}iframe.nb{border:0}a{color:var(--gray);text-decoration:none;word-wrap:break-word;hyphens:auto;word-break:break-word}a.special{color:inherit}figcaption{color:color-mix(in srgb,var(--black) 70%,var(--white) 30%);font-size:.8em;font-style:italic;text-align:right}blockquote{margin:1em 0 0 5em}li>blockquote{margin:1em 0 0 1em}blockquote:before{content:"❝";font-size:2.5em;left:-1.5em;position:absolute;top:-.4em}figcaption{margin-left:1em}figure{margin:0}summary::marker{content:""}summary:before{content:"▶";font-size:.8em;left:-1.2em;position:absolute;top:.15em;transition:all .3s ease}details[open] summary:before{transform:rotate(90deg)}mark{background:var(--white-darker);color:inherit;display:inline-block;padding:1em}footer{align-items:center;display:flex;margin-left:5vw;padding:2em 0 0}footer>a[href="/out/index.html"]{text-decoration:none}footer>a[href="/out/index.html"]:before{content:"✈";padding-right:10px}article footer,main footer{margin-left:0}table{border:10px double var(--gray);border-collapse:collapse;table-layout:fixed}table *{margin:0;text-align:center}td{padding:.3em 1em}tr{border-bottom:1px solid var(--gray)}td:not(:last-of-type),th:not(:last-of-type){border-right:1px solid var(--gray)}h2.footnotes{display:none}#footnotes{border-top:1px solid;padding-top:.5em}.footpara{display:inline}.underline{text-decoration:underline}article img,main img{max-height:60vh;object-fit:contain;object-position:left;width:100%}header img{border-radius:5px;float:right}li .in-margin{left:-3em;top:0}nav.toc{float:right;font-size:.8em;margin:2em;max-width:20vw;position:fixed;right:0;text-overflow:ellipsis;top:0;z-index:999}nav.toc ul{list-style:none;margin:0;padding:0;white-space:nowrap}nav.toc ul .toc-subheading:before{border-left:2px solid gray;content:"";padding-left:.8em}nav.toc ul .toc-subheading:last-child:before{background-image:linear-gradient(180deg,gray 0,gray 50%,transparent 0,transparent 75%,transparent);background-repeat:no-repeat;background-size:2px 100%;border-left:none}nav.toc ul .toc-subheading{position:relative}nav.toc ul .toc-subheading:after{border-bottom:2px solid gray;content:"";height:.5em;left:0;position:absolute;width:.6em}nav.toc a{color:var(--black)}nav.toc ul .toc-subheading{margin-left:.6em}@media only screen and (max-width:600px){article{padding-left:8vw;padding-right:0}nav.toc{display:none}header img{float:revert}blockquote{margin-left:1em}blockquote:before{left:-.7em}}
