--- a/assets/styles/minor.css
+++ b/assets/styles/minor.css
@@ -13,16 +13,44 @@
     font-weight: normal;
 }
 
+.katex {
+    white-space: pre;
+}
+
+.minor-fold summary {
+    font-size: 0.8em;
+    color: var(--gray);
+}
+
 .gnuplot-container pre {
     background-color: var(--white-lighter);
+    color: var(--black-darker) !important;
     padding: 0;
     font-family: 'Body Font';
+    overflow-wrap: unset !important;
+    word-wrap: unset !important;
+  overflow-x: auto;         /* enable horizontal scroll if too wide */
+  max-width: 100vw;          /* don't extend beyond parent */
 }
 
 .gnuplot-container {
     width: fit-content;
     height: fit-content;
     font-size: 0.8em;
+}
+
+.pdf-container img {
+    max-height: none;
+}
+
+.pdf-container {
+    touch-action: none; /* needed for pinch gestures */
+    transform-origin: 0 0; /* scale from top-left */
+}
+
+.gnuplot-container svg {
+    width: 100%;
+    height: 100%;
 }
 
 .pxl,
@@ -46,6 +74,9 @@
     text-align: center;
 }
 
+.split > * {
+    width: 100%;
+}
 
 /* Split section vertically */
 .split,
@@ -54,6 +85,14 @@
     grid-template-columns: 1fr 1fr;
     grid-column-gap: 1em;
     grid-row-gap: 1em;
+}
+
+.split-f {
+    display: flex;
+}
+
+.split-f > * {
+    flex: 1;
 }
 
 .split-e {
@@ -86,6 +125,10 @@
     flex-wrap: wrap;
     column-gap: 1em;
     row-gap: 1em;
+}
+
+header .img-sml, .img-pxl {
+    image-rendering: pixelated;
 }
 
 .img-sml {
